crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_nested_v_if_v_else.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ImportMeta augmentation (Vite/Nuxt)
declare global {
  interface ImportMeta {
    readonly env: Record<string, string | boolean | undefined>;
    readonly client: boolean;
    readonly server: boolean;
    readonly dev: boolean;
    readonly prod: boolean;
    readonly ssr: boolean;
    readonly hot?: {
      readonly data: any;
      accept(): void;
      accept(cb: (mod: any) => void): void;
      accept(dep: string, cb: (mod: any) => void): void;
      accept(deps: readonly string[], cb: (mods: any[]) => void): void;
      dispose(cb: (data: any) => void): void;
      decline(): void;
      invalidate(message?: string): void;
      on(event: string, cb: (...args: any[]) => void): void;
    };
    glob(pattern: string, options?: any): Record<string, any>;
    glob(pattern: string[], options?: any): Record<string, any>;
  }
}

// ========== Module Scope (imports) ==========
import { ref } from 'vue'

// ========== Exported Types ==========
export type Props = {};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  // Emit type helper: converts { event: [args] } to callable emit function
  type __EmitFn<T> = T extends Record<string, any[]> ? <K extends keyof T>(event: K, ...args: T[K]) => void : T;
  function defineProps<_T = unknown>(): _T { return undefined as unknown as _T; }
  function defineEmits<_T = unknown>(): __EmitFn<_T> { return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(_name?: string, _options?: any): _T { void _name; void _options; return undefined as unknown as _T; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T = unknown, _D = unknown>(_props: _T, _defaults: _D): _T & _D { void _props; void _defaults; return undefined as unknown as _T & _D; }
  function useTemplateRef<_T extends Element | import('vue').ComponentPublicInstance = Element>(_key: string): import('vue').ShallowRef<_T | null> { void _key; return undefined as unknown as import('vue').ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  
  
  const status = ref<'loading' | 'error' | 'success'>('loading')
  const message = ref('')
  const data = ref<string[]>([])
  // @vize-map: 2597:2727 -> 0:146

  // ========== Template Scope (inherits from setup) ==========
  // Ref type captures (before template scope shadows them)
  type __VizeRef_ref = typeof ref;
  type __VizeRef_status = typeof status;
  type __VizeRef_data = typeof data;
  type __VizeRef_message = typeof message;
  (function __template() {
    // Auto-unwrap refs (Vue template behavior)
    var ref: import('vue').UnwrapRef<__VizeRef_ref> = undefined as any;
    var status: import('vue').UnwrapRef<__VizeRef_status> = undefined as any;
    var data: import('vue').UnwrapRef<__VizeRef_data> = undefined as any;
    var message: import('vue').UnwrapRef<__VizeRef_message> = undefined as any;
    // Vue template context (delegates to ComponentPublicInstance)
    type __VizeCtx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __VizeCtx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  void (status === 'loading'); // VIf
  // @vize-map: expr -> 215:235
  void (status === 'error'); // VIf
  // @vize-map: expr -> 274:292
  void (message); // Interpolation
  // @vize-map: expr -> 311:318

  // v-for scope: item in data
  (data).forEach((item: typeof data[number]) => {
    void item;
    void (item); // VBind
    // @vize-map: expr -> 386:390
    void (item); // Interpolation
    // @vize-map: expr -> 395:399
  });

  // Reference setup bindings (used in template/CSS v-bind)
  void ref; void status; void data; void message;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
declare const __vize_component__: {
  props: Props;
  emits: Emits;
  slots: Slots;
};
export default __vize_component__;
