crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_scoped_slots.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ImportMeta augmentation (Vite/Nuxt)
declare global {
  interface ImportMeta {
    readonly env: Record<string, string | boolean | undefined>;
    readonly client: boolean;
    readonly server: boolean;
    readonly dev: boolean;
    readonly prod: boolean;
    readonly ssr: boolean;
    readonly hot?: {
      readonly data: any;
      accept(): void;
      accept(cb: (mod: any) => void): void;
      accept(dep: string, cb: (mod: any) => void): void;
      accept(deps: readonly string[], cb: (mods: any[]) => void): void;
      dispose(cb: (data: any) => void): void;
      decline(): void;
      invalidate(message?: string): void;
      on(event: string, cb: (...args: any[]) => void): void;
    };
    glob(pattern: string, options?: any): Record<string, any>;
    glob(pattern: string[], options?: any): Record<string, any>;
  }
}

// ========== Module Scope (imports) ==========
import { ref } from 'vue'
import MyList from './MyList.vue'

// ========== Exported Types ==========
export type Props = {};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  // Emit type helper: converts { event: [args] } to callable emit function
  type __EmitFn<T> = T extends Record<string, any[]> ? <K extends keyof T>(event: K, ...args: T[K]) => void : T;
  function defineProps<_T = unknown>(): _T { return undefined as unknown as _T; }
  function defineEmits<_T = unknown>(): __EmitFn<_T> { return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(_name?: string, _options?: any): _T { void _name; void _options; return undefined as unknown as _T; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T = unknown, _D = unknown>(_props: _T, _defaults: _D): _T & _D { void _props; void _defaults; return undefined as unknown as _T & _D; }
  function useTemplateRef<_T extends Element | import('vue').ComponentPublicInstance = Element>(_key: string): import('vue').ShallowRef<_T | null> { void _key; return undefined as unknown as import('vue').ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  
  
  const items = ref(['a', 'b', 'c'])
  // @vize-map: 2631:2674 -> 0:97

  // ========== Template Scope (inherits from setup) ==========
  // Ref type captures (before template scope shadows them)
  type __VizeRef_ref = typeof ref;
  type __VizeRef_items = typeof items;
  (function __template() {
    // Auto-unwrap refs (Vue template behavior)
    var ref: import('vue').UnwrapRef<__VizeRef_ref> = undefined as any;
    var items: import('vue').UnwrapRef<__VizeRef_items> = undefined as any;
    // Vue template context (delegates to ComponentPublicInstance)
    type __VizeCtx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __VizeCtx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  void (items); // VBind
  // @vize-map: expr -> 161:166

  // v-slot scope: #default
  void function _slot_default({ item, index }: any) {
    void item;
    void index;
    void (index); // Interpolation
    // @vize-map: expr -> 226:231
    void (item); // Interpolation
    // @vize-map: expr -> 239:243
  };

  // v-slot scope: #header
  void function _slot_header({ title }: any) {
    void title;
    void (title); // Interpolation
    // @vize-map: expr -> 318:323
  };

  // Component props type declarations
  // @vize-map: component -> 145:168
  type __MyList_Props_0 = typeof MyList extends { new (): { $props: infer __P } } ? __P : (typeof MyList extends (props: infer __P) => any ? __P : {});
  type __MyList_0_prop_items = __MyList_Props_0 extends { 'items'?: infer T } ? T : __MyList_Props_0 extends { 'items': infer T } ? T : unknown;

  // Component props value checks (template scope)
  // @vize-map: prop -> 153:166
  (items) as __MyList_0_prop_items;

  // Component props in v-slot scope: #default
  void function _slot_props_default({ item, index }: any) {
    void item;
    void index;
  };

  // Component props in v-slot scope: #header
  void function _slot_props_header({ title }: any) {
    void title;
  };

  // Mark used components as referenced
  void MyList;

  // Reference setup bindings (used in template/CSS v-bind)
  void ref; void MyList; void items;
  })();
}

// Invoke setup to verify types
__setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
declare const __vize_component__: {
  props: Props;
  emits: Emits;
  slots: Slots;
};
export default __vize_component__;
