crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_v_for_destructuring.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ImportMeta augmentation (reference existing framework types)
/// <reference types="vite/client" />
declare global {
  // Extend ImportMeta with Nuxt-specific properties not covered by vite/client
  interface ImportMeta {
    readonly client: boolean;
    readonly server: boolean;
    readonly dev: boolean;
    readonly prod: boolean;
    readonly ssr: boolean;
  }
}

type $Vue = import('vue');

// ========== Module Scope (imports) ==========
import { ref } from 'vue'
interface Item {
  id: number
  name: string
}

// ========== Exported Types ==========
export type Props = {};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  // Emit type helper: converts { event: [args] } to callable emit function
  type __EmitFn<T> = <K extends keyof T>(event: K, ...args: T[K] extends any[] ? T[K] : any[]) => void;
  // Vue ref type aliases (resolved from node_modules/vue)
  type __Ref<T> = import('vue').Ref<T>;
  type __ShallowRef<T> = import('vue').ShallowRef<T>;
  function defineProps<_T = unknown>(_props?: any): _T { void _props; return undefined as unknown as _T; }
  function defineEmits<_T = unknown>(): __EmitFn<_T> { return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(_name?: string, _options?: any): __Ref<_T> { void _name; void _options; return undefined as unknown as __Ref<_T>; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T = unknown, _D = unknown>(_props: _T, _defaults: _D): _T & _D { void _props; void _defaults; return undefined as unknown as _T & _D; }
  function useTemplateRef<_T = Element>(_key: string): __ShallowRef<_T | null> { void _key; return undefined as unknown as __ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  
  
  
  const items = ref<Item[]>([])
  
  // @vize-map: 2305:2349 -> 0:106

  // ========== Template Scope (inherits from setup) ==========
  // Ref type captures (before template scope shadows them)
  type __Ref_ref = typeof ref;
  type __Ref_items = typeof items;
  ;(function __template() {
    // Auto-unwrap refs (Vue template behavior)
    type __UnwrapRef<T> = import('vue').UnwrapRef<T>;
    var ref: __UnwrapRef<__Ref_ref> = undefined as any;
    var items: __UnwrapRef<__Ref_items> = undefined as any;
    // Vue template context (delegates to ComponentPublicInstance)
    type __Ctx = $Vue['ComponentPublicInstance'];
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;


  // v-for scope: id in items
  (items).forEach((id: typeof items[number], name: number) => {
    void id;
    void name;
    void (id); // VBind
    // @vize-map: expr -> 203:205
    void (id); // Interpolation
    // @vize-map: expr -> 217:219
    void (name); // Interpolation
    // @vize-map: expr -> 227:231
  });

  // Reference setup bindings (used in template/CSS v-bind)
  void ref; void items;
  })();
}

// Invoke setup to verify types
void __setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
declare const __vize_component__: {
  props: Props;
  emits: Emits;
  slots: Slots;
};
export default __vize_component__;
